# surgical-planning-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: validate-and-test.yml
api/controller/: surgical_planning_controller.py
api/schema/: surgical_planning_input.py  urgency.py
app/: main.py
controller/: hello_controller.py
domain/schema/: comorbidity.py  severity.py
evals/: _runner_helpers.py  presets.py  run_all.py  run_asa.py  run_checklist.py  run_postop.py
evals/datasets/: __init__.py  asa.py  checklist.py  postop.py
evals/metrics/: __init__.py  clinical.py
evals/runners/: asa.py  checklist.py  postop.py
graph/: graph.py  state.py
graph/nodes/: ASA_classifier_node.py  critic_node.py  input_guard_node.py  perioperative_checklist_node.py  postoperative_care_node.py  risk_classifier_node.py
graph/schema/: ASAOutput.py  ASA_output.py  perioperative_checklist_output.py  postoperative_care_output.py
safety/: __init__.py  exceptions.py  guards.py  patterns.py  validators.py
test/: test_ASA_classification_node.py  test_critic_node.py  test_input_guard_node.py  test_perioperative_checklist_node.py  test_postoperative_care_node.py  test_safety_guards.py  test_surgical_planning_input.py
