[project]
name = "surgical-planning-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "langgraph>=1.1.10",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "deepeval>=3.9.9",
    "guardrails-ai>=0.10.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
